traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: error: missing argument list for method != in class Object
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$bang$eq _` or `$bang$eq(_)` instead of `$bang$eq`.
  while (!=arrivee()){
         ^Snake:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:27: warning: enclosing method arrivee has result type Unit: return value discarded
        return true
        ^Snake:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^Snake:29: warning: enclosing method arrivee has result type Unit: return value discarded
        return false
        ^Snake:35: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true  
               ^Snake:35: warning: enclosing method arrivee has result type Unit: return value discarded
        return true  
        ^Snake:37: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^Snake:37: warning: enclosing method arrivee has result type Unit: return value discarded
        return false
        ^Snake:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:41: warning: enclosing method arrivee has result type Unit: return value discarded
    return false
    ^